smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/apply/apply-missing-newline.smithy
// Parse error at line 5, column 29 near `apply`: Expected a line break | Model
$version: "2.0"
namespace com.foo

apply SomeShape @deprecated apply SomeShape @sensitive
